fix anchors position on mobile screens (#774)
* fix: add fix to position of anchor in DescriptionList

* fix: move anchors to the right in DescriptionList on mobile screens

* fix: move anchors to the right in content on mobile screens

--- a/src/components/shared/description-list/description-list.module.scss
+++ b/src/components/shared/description-list/description-list.module.scss
@@ -17,6 +17,10 @@
         text-decoration: none !important;
         border: none !important;
       }
+      @include sm-down {
+        position: static !important;
+        margin-left: 5px;
+      }
     }
     &:hover {
       .anchor-icon {
